--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Online Radio Stations Worldwide | Listen Live | radio.radiosdelight.com</title>
+    <title>Online Radio Stations Worldwide | Listen Live | radio-germany.radiosdelight.com</title>
     <meta name="description" content="Discover a world of music, news, and entertainment with our online radio platform! Access a global list of radio stations from every corner of the world, all in one place. Enjoy free streaming of your favorite stations, explore new genres, and stay connected to cultures worldwide. Whether you're looking for local broadcasts or international hits, our platform brings radio closer to you, anytime, anywhere!">
     <meta name="keywords" content="radio, online radio stations, worldwide radio, live radio, music stations, Radios Delight, London, soul music, digital radio">
-    <meta name="author" content="Radio">
-    <link rel="canonical" href="https://radio.radiosdelight.com/">
+    <meta name="author" content="Radio-Germany">
+    <link rel="canonical" href="https://radio-germany.radiosdelight.com">
 
     <!-- Icons -->
     <link rel="icon" href="/img/fav_icon.png" sizes="any">
@@ -18,16 +18,16 @@
     <link rel="icon" href="/img/fav_icon.png" sizes="16x16">
 
     <!-- Alternate Languages -->
-    <link rel="alternate" hreflang="en" href="https://radio.radiosdelight.com/">
-    <link rel="alternate" hreflang="es" href="https://radio.radiosdelight.com/">
-    <link rel="alternate" hreflang="fr" href="https://radio.radiosdelight.com/">
-    <link rel="alternate" hreflang="x-default" href="https://radio.radiosdelight.com/">
+    <link rel="alternate" hreflang="en" href="https://radio-germany.radiosdelight.com">
+    <link rel="alternate" hreflang="es" href="https://radio-germany.radiosdelight.com">
+    <link rel="alternate" hreflang="fr" href="https://radio-germany.radiosdelight.com">
+    <link rel="alternate" hreflang="x-default" href="https://radio-germany.radiosdelight.com">
 
     <!-- Open Graph / Social Meta -->
     <meta property="og:title" content="Radios Delight - Online Radio Stations Worldwide">
     <meta property="og:description" content="Discover and listen to worldwide radio stations online at RadiosDelight.com. Enjoy your favorite radio shows anytime, anywhere!">
-    <meta property="og:image" content="https://radio.radiosdelight.com/img/og_image.png">
-    <meta property="og:url" content="https://radio.radio.radiosdelight.com/">
+    <meta property="og:image" content="https://radio-germany.radiosdelight.com/img/og_image.png">
+    <meta property="og:url" content="https://radio-germany.radiosdelight.com">
     <meta property="og:type" content="website">
 
     <!-- Fonts -->
@@ -67,6 +67,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <style>
+        
         html,body {
             font-family: "Open Sans", sans-serif;
             background-color: #1c313a;
