--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
 <!-- Main Container -->
 <main class="container my-4 ">
-    <h1 class="countryTitle  mt-1 mb-4 text-white text-center" style="width: 100%;">Live Canada Radio Station Online</h1>
+    <h1 class="countryTitle  mt-1 mb-4 text-white text-center" style="width: 100%;">Live Germany Radio Station Online</h1>
     <section>
         <div class="row">
             <!-- Main Content -->
