--- a/header.html
+++ b/header.html
@@ -139,7 +139,7 @@ a:visited {
                     <img id="Logo" src="/img/fav_icon.png" alt="Station Logo">
                 </a>
                 <a href="index.html" style="text-decoration: none;">
-                    <h3 class="mt-1 mb-2 text-white" >Radios</h3>
+                    <h3 class="mt-1 mb-2 text-white" >Radio-Norway</h3>
                 </a>
 
                 <!-- Search bar -->
