--- a/play.html
+++ b/play.html
@@ -193,7 +193,7 @@
       <div style="background-color:rgb(77, 100, 111); display: flex; align-items: center; justify-content: center; padding: 0px; width: 100%;margin-bottom: 21px;">
           <span id="breadcrumbs" style="width:100%;padding:4px;font-size:13px;color:#fff;display:none;">Radio Station |  </span>
       </div>
-      <h1 class="countryTitle" style="display: none;">Live Germany Radio Station Online</h1>
+      <h1 class="countryTitle" style="display: none;">Live Norway Radio Station Online</h1>
       <div class="row">
           <div class="col-md-9">
 
